# ProfitAgent

./: AppStateViewModel.cpp  AppStateViewModel.h  AuthViewModel.cpp  AuthViewModel.h  CMakeLists.txt  ChefViewModel.cpp  ChefViewModel.h  DashboardViewModel.cpp  DashboardViewModel.h  EmployeesScreen.qml  FinanceScreen.qml  HelpScreen.qml  Main.qml  MenuViewModel.cpp  MenuViewModel.h  NavigationViewModel.cpp  NavigationViewModel.h  ProductOperationDialog.qml  Sidebar.qml  WaiterViewModel.cpp  WaiterViewModel.h  WarehouseViewModel.cpp  WarehouseViewModel.h  main.cpp
application/database/: Database.cpp  Database.h
application/services/: AuthService.cpp  AuthService.h  EmployeeService.cpp  EmployeeService.h  MenuService.cpp  MenuService.h  OrderService.cpp  OrderService.h  WarehouseService.cpp  WarehouseService.h
domain/: Domain.h
domain/audit/: OperationLog.cpp  OperationLog.h
domain/employees/: Employee.cpp  Employee.h
domain/menu/: Dish.cpp  Dish.h  IMenuService.h  MenuService.cpp  MenuService.h  Recipe.cpp  Recipe.h
domain/orders/: Order.cpp  Order.h
domain/value_objects/: Money.cpp  Money.h  Quantity.cpp  Quantity.h
domain/warehouse/: IWarehouseService.h  Product.cpp  Product.h  StockBatch.cpp  StockBatch.h  Warehouse.cpp  Warehouse.h  WarehouseService.cpp  WarehouseService.h
presentation/viewmodels/: AppStateViewModel.cpp  AppStateViewModel.h  AuthViewModel.cpp  AuthViewModel.h  ChefViewModel.cpp  ChefViewModel.h  DashboardViewModel.cpp  DashboardViewModel.h  EmployeeViewModel.cpp  EmployeeViewModel.h  MenuViewModel.cpp  MenuViewModel.h  NavigationViewModel.cpp  NavigationViewModel.h  WaiterViewModel.cpp  WaiterViewModel.h  WarehouseViewModel.cpp  WarehouseViewModel.h
presentation/views/components/: KPICard.qml  OperationsTable.qml
presentation/views/dialogs/: EditEmployeeDialog.qml  OrderEntryDialog.qml
presentation/views/screens/: EmployeesScreen.qml  WaiterScreen.qml
